3_gitops/apps/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: echoserver
