3_gitops/apps/echo/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: echo
  annotations:
    link.argocd.argoproj.io/external-link: https://echo.platform.local
spec:
  hosts:
  - echo.platform.local
  gateways:
  - platform/platform-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: echo.development.svc.cluster.local
        port:
          number: 80
    rewrite:
      authority: echo.platform.local
